src/assets/css/suneditor-contents.css
/* suneditor contents */
.sun-editor-editable {
    font-family: Helvetica Neue, sans-serif;
    font-size: 13px;
    color: #000;
    text-align: left;
    background-color: #fff;
    word-break: break-all;
    padding: 10px 20px 10px 20px;
    margin: 0;
}

.sun-editor-editable * {
    font-family: inherit;
    font-size: inherit;
    color: inherit;
    background-color: inherit;
    box-sizing: border-box;
}

/** controllers on tag */
.sun-editor-editable a, .sun-editor-editable td, .sun-editor-editable th, 
.sun-editor-editable figure, .sun-editor-editable figcaption, .sun-editor-editable img, 
.sun-editor-editable iframe {
    position: relative;
}

/* float */
.sun-editor-editable .float-left {
    float: left;
}
.sun-editor-editable .float-right {
    float: right;
}
.sun-editor-editable .float-center {
    float: center;
}
.sun-editor-editable .float-none {
    float: none;
}

/* a */
.sun-editor-editable a {
    color: #004cff;
    text-decoration: none;
}
.sun-editor-editable a:hover, .sun-editor-editable a:focus {
    cursor: pointer;
    color: #0093ff;
    text-decoration: underline;
}

/* pre */
.sun-editor-editable pre {
    display: block;
    padding: 8px;
    margin: 0;
    font-size: 13px;
    line-height: 1.45;
    color: #333;
    word-break: break-all;
    word-wrap: break-word;
    background-color: #f6f8fa;
    border: 1px solid #dce5e5;
    border-radius: 3px;
}

/* ol, ul */
.sun-editor-editable ol {
    display: block;
    list-style-type: decimal;
    margin-block-start: 1em;
    margin-block-end: 1em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
    padding-inline-start: 40px;
}
.sun-editor-editable ul {
    display: block;
    list-style-type: disc;
    margin-block-start: 1em;
    margin-block-end: 1em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
    padding-inline-start: 40px;
}
.sun-editor-editable li {
    display: list-item;
    text-align: -webkit-match-parent;
    margin-bottom: 5px;
}

/* sub, sup */
.sun-editor-editable sub, .sun-editor-editable sup {
    font-size: 75%;
    line-height: 0;
}
.sun-editor-editable sub {
    vertical-align: sub;
}
.sun-editor-editable sup {
    vertical-align: super;
}

/** format style */
/* p */
.sun-editor-editable p {
    display: block;
    margin-block-start: 1em;
    margin-block-end: 1em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
}

/* div */
.sun-editor-editable div {
    display: block;
    margin: 0;
    padding: 0;
}

/* blockquote */
.sun-editor-editable blockquote {
    display: block;
    margin-block-start: 1em;
    margin-block-end: 1em;
    margin-inline-start: 40px;
    margin-inline-end: 40px;
    border-style: solid;
    border-width: 0;
    padding-top: 0;
    padding-bottom: 0;
    padding-left: 20px;
    padding-right: 5px;
    border-left-width: 5px;
}
.sun-editor-editable blockquote {
    border-color: #8baab7;
}
.sun-editor-editable blockquote blockquote {
    border-color: #a2bfcc;
}
.sun-editor-editable blockquote blockquote blockquote {
    border-color: #bbd5e0;
}
.sun-editor-editable blockquote blockquote blockquote blockquote {
    border-color: #d4e3ea;
}

/* h1 */
.sun-editor-editable h1 {
    display: block;
    font-size: 2em;
    margin-block-start: 0.67em;
    margin-block-end: 0.67em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
    font-weight: bold;
}
/* h2 */
.sun-editor-editable h2 {
    display: block;
    font-size: 1.5em;
    margin-block-start: 0.83em;
    margin-block-end: 0.83em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
    font-weight: bold;
}
/* h3 */
.sun-editor-editable h3 {
    display: block;
    font-size: 1.17em;
    margin-block-start: 1em;
    margin-block-end: 1em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
    font-weight: bold;
}
/* h4 */
.sun-editor-editable h4 {
    display: block;
    margin-block-start: 1.33em;
    margin-block-end: 1.33em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
    font-weight: bold;
}
/* h5 */
.sun-editor-editable h5 {
    display: block;
    font-size: 0.83em;
    margin-block-start: 1.67em;
    margin-block-end: 1.67em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
    font-weight: bold;
}
/* h6 */
.sun-editor-editable h6 {
    display: block;
    font-size: 0.67em;
    margin-block-start: 2.33em;
    margin-block-end: 2.33em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
    font-weight: bold;
}

/* hr */
.sun-editor-editable hr {
    display: block;
    border-width: 1px 0 0;
    border-color: black;
    border-image: initial;
    height: 1px;
}
.sun-editor-editable hr.solid {
    border-style: solid none none;
}
.sun-editor-editable hr.dotted {
    border-style: dotted none none;
}
.sun-editor-editable hr.dashed {
    border-style: dashed none none;
}
.sun-editor-editable img.inner-link {
    padding: 1px;
    margin: 1px;
    outline: 1px solid #a2bfcc;
}

/* table */
.sun-editor-editable table {
    display: table;
    table-layout: auto;
    border: 1px solid rgb(204, 204, 204);
    /* table-layout: fixed; */
    width: 100%;
    max-width: 100%;
    margin-bottom: 20px;
    background-color: transparent;
    border-spacing: 0;
    border-collapse: collapse;
}
.sun-editor-editable table tr {
    border: 1px solid #ccc;
}
.sun-editor-editable table td {
    border: 1px solid #ccc; padding:8px;
}
.sun-editor-editable table td.sun-editor-selected-cell {
    outline: 2px solid #8baab7;
}

/** component (image, iframe video) */
.sun-editor-editable .sun-editor-id-comp {
    display: flex;
    padding: 20px 40px;
}
.sun-editor-editable[contenteditable=true] .sun-editor-id-comp {
    outline: 1px dashed #ccc;
}

/** image, video iframe figure cover */
.sun-editor-editable figure.sun-editor-figure-cover {
    display: block;
    outline: none;
    line-height: 0;
    margin: 0;
    padding: 0;
}
.sun-editor-editable figure.sun-editor-figure-cover * {
    display: flex;
}
.sun-editor-editable figure.sun-editor-figure-cover figcaption {
    padding: 1em .5em;
    margin: 0;
    font-size: 13px;
    background-color: #f3f3f3;
}
.sun-editor-editable figure.sun-editor-figure-cover figcaption p{
    line-height: 2;
    margin: 0;
}
.sun-editor-editable figure.sun-editor-figure-cover figcaption[contenteditable=true] {
    outline: 1px dashed #ccc;
}

/* image */
.sun-editor-editable .sun-editor-id-image-container a {
    display: block;
}
.sun-editor-editable .sun-editor-id-image-container a img {
    padding: 1px;
    margin: 1px;
    outline: 1px solid #8baab7;
}

/** video iframe tags */
.sun-editor-editable .sun-editor-id-iframe-container iframe {
    outline: 1px solid #9e9e9e;
}
.sun-editor-editable .sun-editor-id-iframe-inner-resizing-cover {
    display: none;
}
.sun-editor-editable[contenteditable=true] .sun-editor-id-iframe-inner-resizing-cover {
    display: block;
    position:absolute;
    width: 100%;
    height: 100%;
    left: 0px;
    top: 0px;
    background-color: transparent;
}

/** show blocks */
.sun-editor-show-block p, .sun-editor-show-block div, .sun-editor-show-block h1, .sun-editor-show-block h2, .sun-editor-show-block h3, .sun-editor-show-block h4, .sun-editor-show-block h5, .sun-editor-show-block h6 {
    border: 1px dashed #a2bfcc;
    padding: 10px 8px 8px 8px;
}
.sun-editor-show-block p {
    background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAA0AAAAPAQMAAAAF7dc0AAAABlBMVEWAgID////n1o2sAAAAAnRSTlP/AOW3MEoAAAAaSURBVAjXY/j/gwGCPvxg+F4BQiAGDP1HQQByxxw0gqOzIwAAAABJRU5ErkJggg==') no-repeat;
}
.sun-editor-show-block div {
    background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABUAAAAPAQMAAAAxlBYoAAAABlBMVEWAgID////n1o2sAAAAAnRSTlP/AOW3MEoAAAAmSURBVAjXY/j//wcDDH+8XsHwDYi/hwNx1A8w/nYLKH4XoQYJAwCXnSgcl2MOPgAAAABJRU5ErkJggg==') no-repeat;
}
.sun-editor-show-block h1 {
    background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABEAAAAPAQMAAAA4f7ZSAAAABlBMVEWAgID////n1o2sAAAAAnRSTlP/AOW3MEoAAAAfSURBVAjXY/j/v4EBhr+9B+LzEPrDeygfhI8j1CBhAEhmJGY4Rf6uAAAAAElFTkSuQmCC') no-repeat;
}
.sun-editor-show-block h2 {
    background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABEAAAAPAQMAAAA4f7ZSAAAABlBMVEWAgID////n1o2sAAAAAnRSTlP/AOW3MEoAAAAmSURBVAjXY/j/v4EBhr+dB+LtQPy9geEDEH97D8T3gbgdoQYJAwA51iPuD2haEAAAAABJRU5ErkJggg==') no-repeat;
}
.sun-editor-show-block h3 {
    background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABEAAAAPAQMAAAA4f7ZSAAAABlBMVEWAgID////n1o2sAAAAAnRSTlP/AOW3MEoAAAAiSURBVAjXY/j/v4EBhr+dB+LtQPy9geHDeQgN5p9HqEHCADeWI+69VG2MAAAAAElFTkSuQmCC') no-repeat;
}
.sun-editor-show-block h4 {
    background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABIAAAAPAQMAAADTSA1RAAAABlBMVEWAgID////n1o2sAAAAAnRSTlP/AOW3MEoAAAAiSURBVAjXY/j//wADDH97DsTXIfjDdiDdDMTfIRhZHRQDAKJOJ6L+K3y7AAAAAElFTkSuQmCC') no-repeat;
}
.sun-editor-show-block h5 {
    background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABEAAAAPAQMAAAA4f7ZSAAAABlBMVEWAgID////n1o2sAAAAAnRSTlP/AOW3MEoAAAAlSURBVAjXY/j/v4EBhr+1A/F+IO5vYPiwHUh/B2IQfR6hBgkDABlWIy5uM+9GAAAAAElFTkSuQmCC') no-repeat;
}
.sun-editor-show-block h6 {
    background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABEAAAAPAQMAAAA4f7ZSAAAABlBMVEWAgID////n1o2sAAAAAnRSTlP/AOW3MEoAAAAiSURBVAjXY/j/v4EBhr+dB+LtQLy/geFDP5S9HSKOrA6KAR9GIza1ptJnAAAAAElFTkSuQmCC') no-repeat;
}

